--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="134dp"
-        android:text="                    "
-        android:textColor="#000000"
-        android:textSize="50sp"
+        android:layout_width="416dp"
+        android:layout_height="257dp"
         android:textStyle="bold"
+        android:text="         hello           "
+        android:textColor="#000000"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintVertical_bias="0.033" />
 
     <SeekBar
         android:id="@+id/seekBar"
